Create post book method in client

--- a/client-app/app/index.html
+++ b/client-app/app/index.html
@@ -3,7 +3,6 @@
 <head>
 	<title>Book Collection</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="css/bootstrap-material.css" />  
     <link href="css/app.css" rel="stylesheet" type="text/css">
 
 	<script src="js/angular.min.js"></script>
@@ -14,7 +13,7 @@
 
 </head>
 <body ng-app="App">
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse">
 		<div class="container">
     		<div class="navbar-collapse collapse navbar-responsive-collapse">
       			<ul class="nav navbar-nav">
